<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sunteckindia.ui.viewmodels.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LargeTextStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_gender"
                android:textColor="@color/black" />

            <RadioGroup

                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@={viewModel.rgGenderChecked}"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbMale"
                    style="@style/MediumTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_male" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbFemale"
                    style="@style/MediumTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/lbl_female" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LargeTextStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/lbl_notification_s"
                android:textColor="@color/black" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:checked="@={viewModel.showNotification}" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LargeTextStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/lbl_item"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/item_list"
                android:onItemSelected="@{(parent,view,pos,id)->viewModel.onSelectItem(parent,view,pos,id)}"
                android:selection="@={viewModel.itemPos}" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LargeTextStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/lbl_hobbies"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbCricket"
                    style="@style/MediumTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{(compoundButton, checked) -> viewModel.onCheckedChange(compoundButton, checked)}"
                    android:text="@string/lbl_cricket" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbDance"
                    style="@style/MediumTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:onCheckedChanged="@{(compoundButton, checked) -> viewModel.onCheckedChange(compoundButton, checked)}"
                    android:text="@string/lbl_dance" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbOther"
                    style="@style/MediumTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:onCheckedChanged="@{(compoundButton, checked) -> viewModel.onCheckedChange(compoundButton, checked)}"
                    android:text="@string/lbl_other" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                errorTextInputLayout="@{viewModel.errorName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/lbl_user_name"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@={viewModel.inputName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                errorTextInputLayout="@{viewModel.errorEmail}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/lbl_user_email"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@={viewModel.inputEmail}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                errorTextInputLayout="@{viewModel.errorPass}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/lbl_user_password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={viewModel.inputPass}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:onClick="@{()->viewModel.onRegisterClick()}"
                android:text="@string/lbl_register"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHideView"
                style="@style/LargeTextStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModel.details}"
                android:textColor="@color/black"
                android:visibility="@{viewModel.isShowDetails() ? View.VISIBLE : View.GONE}" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>