<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@color/white"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_5sdp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/MediumTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lbl_choose_your_option"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/ic_cancel"
                android:tint="@color/white" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_2sdp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUploadFile"
                android:visibility="gone"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:drawableEnd="@drawable/ic_folder"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                app:drawableTint="@color/white"
                android:text="@string/lbl_document"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvChooseImage"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:drawableEnd="@drawable/ic_image"
                android:gravity="center"
                app:drawableTint="@color/white"
                android:padding="@dimen/_10sdp"
                android:text="@string/lbl_image"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCaptureImage"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:drawableEnd="@drawable/ic_camera"
                android:gravity="center"
                android:drawableTint="@color/white"
                android:padding="@dimen/_10sdp"
                android:text="@string/lbl_capture"
                android:textColor="@color/white" />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>